hello-world.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: ashnik-evaluation 
spec:
  ports:
  - name: hello-world
    port: 4751
    protocol: TCP
    targetPort: 4751
  selector:
    app: hello-world
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: ashnik-evaluation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: testcontainers/helloworld
        name: hello-world
        ports:
        - containerPort: 4751
