ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashnik-ingress
spec:
  rules:
  - host: ashnik.evaluation.com
    http:
      paths:
      - path: /ashnik
        pathType: prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
